IST-155: Fix security, thread-safety, and code quality issues